Update references in the projects #SN-107

--- a/version 2/src/RedShot.Desktop/RedShot.Desktop.Shared/Views/MainMenu.xaml
+++ b/version 2/src/RedShot.Desktop/RedShot.Desktop.Shared/Views/MainMenu.xaml
@@ -11,5 +11,6 @@
 
     <Grid>
         <TextBlock Text="Hello"/>
+        <Button Command="{Binding OpenTestDialogCommand}"/>
     </Grid>
 </v:NavigationPage>
